--- a/index.html
+++ b/index.html
@@ -30,5 +30,15 @@
     </a>
     </figure>
     </div>
+  <div class="r32">
+    <h2>The Car Nicknamed "Godzilla", The R32 GTR</h2>
+    <figure>
+    <a href="https://650t7ler.github.io/The-R32-Skyline/">
+
+      <img class="r32" src="https://images.pexels.com/photos/30145529/pexels-photo-30145529/free-photo-of-classic-jdm-cars-display-at-outdoor-meet.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+      </a>
+    
+    </figure>
+    </div>
 </body>
 </html>
