--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CarFacts Home Page</title>
+  <title>FactCars Home Page</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" >
   <link href="style.css" rel="stylesheet">
   <img class="logo" src="https://dochub.com/tyler-premnauth/Xv7zYW5Rn88EZA2V2A9egx/screenshot-2025-04-25-8-29-46-pm-png">
 </head>
 <body>
-  <h1>CarFacts Home page</h1>
+  <h1>FactCars Home page</h1>
   <h2>Car articles/projects:</h2>
   <div class="frontier">
   <h2>The Nissan Frontier Overview</h2>
