--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>FactCars Home page</h1>
+  <h2>New car articles every week!</h2>
   <h2>Car articles/projects:</h2>
   <div class="frontier">
   <h2>The Nissan Frontier Overview</h2>
@@ -31,7 +32,7 @@
     </figure>
     </div>
   <div class="r32">
-    <h2>The Car Nicknamed "Godzilla", The R32 GTR</h2>
+    <h2>The Car Named Godzilla, The R32 GTR</h2>
     <figure>
     <a href="https://650t7ler.github.io/The-R32-Skyline/">
 
@@ -40,5 +41,16 @@
     
     </figure>
     </div>
+  
 </body>
+  <footer>
+    <h2>MADE BY TYLER PREMNAUTH</h2>
+    <h3>Are you team Mercedes or team BMW?</h3>
+    Team Mercedes<input type="checkbox" name="mercedes" value="mercedes"><br>
+    Team BMW<input type="checkbox" name="bmw" value="bmw">
+    <h2>Send Feedback</h2>
+  <input type="text" name="feedback"  placeholder="ex: You should add: blah blah blah">
+  <button type="submit">Submit</button>
+  <h4>Gmail: tylerpremnauth@gmail.com</h4>
+  </footer>
 </html>
