--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <figure>
     <a href="https://650t7ler.github.io/The-R32-Skyline/">
 
-      <img class="r32" src="https://images.pexels.com/photos/30145529/pexels-photo-30145529/free-photo-of-classic-jdm-cars-display-at-outdoor-meet.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+      <img class="r32" src="https://www.shutterstock.com/shutterstock/photos/2557479435/display_1500/stock-photo-fuji-japan-november-on-dislpay-at-the-fuji-speedway-motor-museum-vintage-motorsport-2557479435.jpg">
       </a>
     
     </figure>
@@ -47,7 +47,8 @@
     <h2>MADE BY TYLER PREMNAUTH</h2>
     <h3>Are you team Mercedes or team BMW?</h3>
     Team Mercedes<input type="checkbox" name="mercedes" value="mercedes"><br>
-    Team BMW<input type="checkbox" name="bmw" value="bmw">
+    Team BMW<input type="checkbox" name="bmw" value="bmw"><br>
+    <button type="submit">Submit</button>
     <h2>Send Feedback</h2>
   <input type="text" name="feedback"  placeholder="ex: You should add: blah blah blah">
   <button type="submit">Submit</button>
