--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <figure>
     <a href="https://650t7ler.github.io/The-R32-Skyline/">
 
-      <img class="r32" src="https://www.shutterstock.com/shutterstock/photos/2557479435/display_1500/stock-photo-fuji-japan-november-on-dislpay-at-the-fuji-speedway-motor-museum-vintage-motorsport-2557479435.jpg">
+      <img class="r32" src="https://media.gettyimages.com/id/458365607/photo/nissan-skyline-r32-gtr.jpg?s=612x612&w=gi&k=20&c=-X17WyhfCon98WRoe6B2kJVC9EUG_oQs7ZihpGb3rH0=">
       </a>
     
     </figure>
