--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>FactCars Home Page</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" >
   <link href="style.css" rel="stylesheet">
-  <img class="logo" src="https://dochub.com/tyler-premnauth/EB5r38AwlmmOvzdRXzZ1kD/screenshot-2025-04-26-8-55-41-pm-png">
+  <img class="logo" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiJogQ8cdhB5ilhshDb4DZecrtjnDGixpPb4PsWNYGL79hE08QLSxhNZmSZ0-IfMyJRxLhEhiojfDQ3M_9QJLsC7-9jG9h7rM9WsdO0Wbjc1G7UZ2NR5KsIVZXWHcqaY_CTsfQqC_EyXxZwyBH_REsx20TKaVZEiwhNzHusnmjqR1fsN_2v8PIiqMcEpxCc/s320/Add%20a%20heading%20(423%20x%20246%20px).png">
 </head>
 <body>
   <h1>FactCars Home page</h1>
