--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 </body>
   <footer>
     <h2>MADE BY TYLER PREMNAUTH</h2>
+    <form>
     <h3>Are you team Mercedes or team BMW?</h3>
     Team Mercedes<input type="checkbox" name="mercedes" value="mercedes"><br>
     Team BMW<input type="checkbox" name="bmw" value="bmw"><br>
@@ -54,6 +55,7 @@
     <h2>Send Feedback</h2>
   <input type="text" name="feedback"  placeholder="ex: You should add: blah blah blah">
   <button type="submit">Submit</button>
+    </form>
   <h4>Gmail: tylerpremnauth@gmail.com</h4>
   </footer>
 </html>
