--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
     Team Mercedes<input type="checkbox" name="mercedes" value="mercedes"><br>
     Team BMW<input type="checkbox" name="bmw" value="bmw"><br>
     <button type="submit">Submit</button>
+    </form>
+    
     <h2>Send Feedback</h2>
+    <form>
   <input type="text" name="feedback"  placeholder="ex: You should add: blah blah blah">
   <button type="submit">Submit</button>
     </form>
