--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
   <title>FactCars Home Page</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
   <meta name="viewport" content="width=device-width,initial-scale=1" >
   <link href="style.css" rel="stylesheet">
   <img class="logo" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiJogQ8cdhB5ilhshDb4DZecrtjnDGixpPb4PsWNYGL79hE08QLSxhNZmSZ0-IfMyJRxLhEhiojfDQ3M_9QJLsC7-9jG9h7rM9WsdO0Wbjc1G7UZ2NR5KsIVZXWHcqaY_CTsfQqC_EyXxZwyBH_REsx20TKaVZEiwhNzHusnmjqR1fsN_2v8PIiqMcEpxCc/s320/Add%20a%20heading%20(423%20x%20246%20px).png">
