--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
   <meta name="google-site-verification" content="M5KbAAZnbJFEdmsINwL_-HBA7y2Tr5rqnuRDInEx6Fc" />
-  <title>FactCars: Your Ultimate Car<br>Guide!</title>
+  <title>
+  CarFacts: Your Ultimate Car<br>Guide!
+  </title>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
