--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <img class="logo" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiJogQ8cdhB5ilhshDb4DZecrtjnDGixpPb4PsWNYGL79hE08QLSxhNZmSZ0-IfMyJRxLhEhiojfDQ3M_9QJLsC7-9jG9h7rM9WsdO0Wbjc1G7UZ2NR5KsIVZXWHcqaY_CTsfQqC_EyXxZwyBH_REsx20TKaVZEiwhNzHusnmjqR1fsN_2v8PIiqMcEpxCc/s320/Add%20a%20heading%20(423%20x%20246%20px).png">
 </head>
 <body>
-  <h1>FactCars Home page</h1>
+  <h1>FactCars: Your Ultimate Car<br> Guide!</h1>
   <h2>New car articles every week!</h2>
   <h2>Car articles/projects:</h2>
   <div class="frontier">
