--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link rel="manifest" href="/site.webmanifest">
   <meta name="viewport" content="width=device-width,initial-scale=1" >
   <link href="style.css" rel="stylesheet">
-  <img class="logo" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiJogQ8cdhB5ilhshDb4DZecrtjnDGixpPb4PsWNYGL79hE08QLSxhNZmSZ0-IfMyJRxLhEhiojfDQ3M_9QJLsC7-9jG9h7rM9WsdO0Wbjc1G7UZ2NR5KsIVZXWHcqaY_CTsfQqC_EyXxZwyBH_REsx20TKaVZEiwhNzHusnmjqR1fsN_2v8PIiqMcEpxCc/s320/Add%20a%20heading%20(423%20x%20246%20px).png">
+  <img class="logo" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiOH_KAObVjuRC9Xjt89-YWMPpOa7mNlngom3oaVxY6i8aYk_vg0l3jbTSUHn2IncBqh3FCLQfcxpsLLaMAZGmcgU-hZ2AfChozfA-B0OirFG_TY90XDI7h9oQHo2Ew_TIjAp1nC1a2Kl3HWBu9roSA461F8HTyh1HQaE2ZSEi0yFIBwFbf_WLgKl9-jI7-/s320/Screenshot_2025-07-17_10.15.08_PM-removebg-preview.png">
 </head>
 <body>
   <h1>FactCars: Your Ultimate Car<br> Guide!</h1>
