Change heading to emphasize 'BEST' Dodge

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Can Find In 2026</h2>
     </div>
       
       
-      <h2>The Best Dodge (In My Opinion)</h2>
+      <h2>The BEST Dodge (In My Opinion)</h2>
         <a href="https://carfactsarticles.github.io/FactCars-thedodgeviper/">
     <img class="dodge" src="https://media.gettyimages.com/id/517175286/photo/2016-new-york-international-auto-show.jpg?s=612x612&w=gi&k=20&c=LxhDOiqtibJi9OgSsFZLpz44zMUEoS-94g7qhvIsWG8="></a>
     <p>With a legacy of muscle cars and powerful trucks, which Dodge stands out as the ultimate? Join us as we make a case for the 'best' Dodge, exploring its unique features, performance, and why it holds a special place in the hearts of automotive enthusiasts.</p>
