Add sports hybrids section to index.html
Added a new section for sports hybrids with a title and image.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
   <p>Welcome to FactCars, your ultimate destination for everything automotive! Explore our in-depth articles, discover fascinating car histories, and stay updated with new content published every week.</p>
   <h2>Car articles/projects:</h2>
   <h2>Latest Story:</h2>
+  <div class="sportyhybrids">
+  <h2>Driving the Hybrid Revolution: Which Sports Hybrids Actually Deliver?</h2>
+  <a href="https://carfactsarticles.github.io/CarFacts-best-hybrid-sports-cars/"/>
+    <img class="bestsportyhybrids" src="https://car-images.bauersecure.com/wp-images/160549/1056x594/best-hybrid-cars-in-26.jpg"/>
+    </div>
   <div class="top3dailycars">
   <h2>The Top 3 Best Commuter Cars You
 Can Find In 2026</h2>
