Add paragraph about hybrid technology trends
Added a paragraph explaining the trend of hybrid technology in the automotive industry.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <a href="https://carfactsarticles.github.io/CarFacts-best-hybrid-sports-cars/"/>
     <img class="bestsportyhybrids" src="https://car-images.bauersecure.com/wp-images/160549/1056x594/best-hybrid-cars-in-26.jpg"/>
     </div>
+  <p>This article explores the accelerating trend of hybrid technology in the automotive industry, shifting focus from pure efficiency to high-performance driving.</p>
   <div class="top3dailycars">
   <h2>The Top 3 Best Commuter Cars You
 Can Find In 2026</h2>
