Fix HTML structure for hybrid cars article

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="sportyhybrids">
   <h2>Driving the Hybrid Revolution: Which Sports Hybrids Actually Deliver?</h2>
   <a href="https://carfactsarticles.github.io/CarFacts-best-hybrid-sports-cars/"/>
-    <img class="bestsportyhybrids" src="https://car-images.bauersecure.com/wp-images/160549/1056x594/best-hybrid-cars-in-26.jpg"/>
+    <img class="bestsportyhybrids" src="https://car-images.bauersecure.com/wp-images/160549/1056x594/best-hybrid-cars-in-26.jpg"/></a>
     </div>
   <p>This article explores the accelerating trend of hybrid technology in the automotive industry, shifting focus from pure efficiency to high-performance driving.</p>
   <div class="top3dailycars">
