--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 
   <meta name="google-site-verification" content="M5KbAAZnbJFEdmsINwL_-HBA7y2Tr5rqnuRDInEx6Fc" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiOH_KAObVjuRC9Xjt89-YWMPpOa7mNlngom3oaVxY6i8aYk_vg0l3jbTSUHn2IncBqh3FCLQfcxpsLLaMAZGmcgU-hZ2AfChozfA-B0OirFG_TY90XDI7h9oQHo2Ew_TIjAp1nC1a2Kl3HWBu9roSA461F8HTyh1HQaE2ZSEi0yFIBwFbf_WLgKl9-jI7-/s320/Screenshot_2025-07-17_10.15.08_PM-removebg-preview.png" href="/favicon.png">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <title>CarFacts Home Page</title>
