Update article titles and links in index.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
   <p>Welcome to FactCars, your ultimate destination for everything automotive! Explore our in-depth articles, discover fascinating car histories, and stay updated with new content published every week.</p>
   <h2>Car articles/projects:</h2>
   <h2>Latest Story:</h2>
+      <div class="sportyhybrids">
+  <h2>The EASIEST and CHEAPEST mods to increase HP</h2>
+  <a href="https://carfactsarticles.github.io/cheap-mods-to-increase-hp/"/>
+    <img class="bestsportyhybrids" src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTGmqWJ_yw9hgu4IAXfy5m8GysHpJNlNoZ_unSOSa3r_b2I4quc"> </a>
+    <p>All of us want to drive fast, but great power takes a lot of money. Or So has been said... In this article, we will be covering the easiest and budget-friendly car mods to increase horsepower.</p>
+    </div>
   <div class="sportyhybrids">
   <h2>Driving the Hybrid Revolution: Which Sports Hybrids Actually Deliver?</h2>
   <a href="https://carfactsarticles.github.io/CarFacts-best-hybrid-sports-cars/"/>
@@ -28,7 +34,7 @@
   <p>This article explores the accelerating trend of hybrid technology in the automotive industry, shifting focus from pure efficiency to high-performance driving.</p>
   <div class="top3dailycars">
   <h2>The Top 3 Best Commuter Cars You
-Can Find In 2026</h2>
+Can Find In 2025</h2>
   <a href="https://carfactsarticles.github.io/top-3-best-commuter-cars/">
 <img class="dailycarimg" src="https://www.motortrend.com/files/66e886872660de0008bd3a88/01-2025-honda-civic-si-front-view.jpg"/>
 </a>
